@@ -5,6 +5,7 @@ Support for the `indexType` field to describe table indexes (as not mandatory fo
 DataAPITime: support for "hh:mm" no-seconds format
 DataAPIDuration: improved parse performance by caching regexpes
 DataAPIDuration: support for "P4W"-type strings and for zeroes such as "P", "-PR"
+Collection `insert_many` method employs returnDocumentResponses under the hood
 maintenance: switch to DSE6.9 for local non-Astra testing
 
 v 2.0.0rc1
